# bcs-source

./: README.md
analysis_results/: README.md
analysis_results/genetic_results/: results0.txt  results1.txt
analysis_results/genetic_results/parameters0/: optimizer_parameters.json
analysis_results/genetic_results/parameters1/: simulation_parameters.json
analysis_results/genetic_results/parameters2/: loss_parameters.json  optimizer_parameters.json
analysis_results/greedy_results/: results.txt  results1.txt
analysis_results/greedy_results/parameters/: optimizer_parameters.json
analysis_results/greedy_results/parameters0/: loss_parameters.json
analysis_results/greedy_results/parameters1/: optimizer_parameters.json
analysis_results/greedy_results/parameters2/: optimizer_parameters.json  simulation_parameters.json
analysis_results/kmeans_results/: results.txt
analysis_results/kmeans_results/parameters0/: optimizer_parameters.json  simulation_parameters.json
analysis_results/kmeans_results/parameters1/: optimizer_parameters.json
analysis_results/kmeans_results/parameters2/: optimizer_parameters.json
analysis_results/models/: genetic.txt  genetic_usage.txt  kMeans.txt  random.txt  station_filter.py
analysis_results/random_results/: results0.txt
analysis_results/random_results/parameters0/: simulation_parameters.json
analysis_results/results/: random.txt
analysis_results/results/greedy_results/parameters1/: loss_parameters.json  simulation_parameters.json
analysis_results/results/kmeans_results/: results1.txt
analysis_results/results/random_results/parameters1/: loss_parameters.json
analysis_results/results/simulation_parameters_results/: results1.txt
analysis_results/results/simulation_parameters_results/parameters0/: simulation_parameters.json
analysis_results/simulation_parameters_results/: results0.txt  results2.txt
analysis_results/simulation_parameters_results/parameters/simulation_parameters_search_1/: simulation_parameters.json
analysis_results/simulation_parameters_results/parameters/simulation_parameters_search_2/: simulation_parameters.json
analysis_results/simulation_parameters_results/parameters1/: loss_parameters.json
experiment_analysis/: README.md  metacentrum_grid_search.py  result_extractor.py
map_preprocessing/: README.md  map_parser.py  map_reader.py  node_preprocessor.py
models/: best_model.txt  filtered_genetic.txt  greedy.txt  station_filter.py
prepared_graph/: cities.txt  prepared_combined_nodes.txt  prepared_edges.txt
source_code/: CMakeLists.txt  README.md
source_code/Traffic_Simulator_cmake/: .gitignore
source_code/apps/: CMakeLists.txt  main.cpp
source_code/include/optimizer/: Car.hpp  CarIterator_header.hpp  ChargingStation.hpp  Edge.hpp  GraphAdjuster.hpp  Map.hpp  MapPosition.hpp  MapReader.hpp  ModelRepresentation.hpp  Node.hpp  Optimizer.hpp  OptimizerParameters.hpp  SimulationParameters.hpp  StationParameters.hpp  TableEvent.hpp  TimeTable.hpp  TrafficSimulator.hpp  Vehicle.hpp  boost_header.hpp  global_parameters.hpp
source_code/src/: CMakeLists.txt  Car.cpp  ChargingStation.cpp  Edge.cpp  GraphAdjuster.cpp  Map.cpp  MapPosition.cpp  MapReader.cpp  ModelRepresentation.cpp  Node.cpp  Optimizer.cpp  OptimizerParameters.cpp  SimulationParameters.cpp  StationParameters.cpp  TableEvent.cpp  TimeTable.cpp  TrafficSimulator.cpp  Vehicle.cpp
